# Serveur/python-flask-server/swagger_server/controllers/get_data_controller.py
@@ -1,7 +1,7 @@
 import connexion
 import six
 
-from swagger_server.models.matrix import Matrix  # noqa: E501
+from swagger_server.models.list_matrix import ListMatrix  # noqa: E501
 from swagger_server import util
 
 
@@ -11,6 +11,6 @@ def get_maxtrix_master_get_maxtrix_get_maxtrix():  # noqa: E501
     Get Confusion Matrix of all Algorithms  # noqa: E501
 
 
-    :rtype: Matrix
+    :rtype: ListMatrix
     """
     return 'do some magic!'
