# Serveur/python-flask-server/swagger_server/models/list_matrix.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.matrix import Matrix  # noqa: F401,E501
+from swagger_server import util
+
+
+class ListMatrix(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, data: List[Matrix]=None):  # noqa: E501
+        """ListMatrix - a model defined in Swagger
+
+        :param data: The data of this ListMatrix.  # noqa: E501
+        :type data: List[Matrix]
+        """
+        self.swagger_types = {
+            'data': List[Matrix]
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ListMatrix':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The listMatrix of this ListMatrix.  # noqa: E501
+        :rtype: ListMatrix
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> List[Matrix]:
+        """Gets the data of this ListMatrix.
+
+
+        :return: The data of this ListMatrix.
+        :rtype: List[Matrix]
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: List[Matrix]):
+        """Sets the data of this ListMatrix.
+
+
+        :param data: The data of this ListMatrix.
+        :type data: List[Matrix]
+        """
+
+        self._data = data
